# bevy2d_demo

./: Cargo.toml  README.md  senrenbankacn.rar.st
src/: assets.rs  camera.rs  main.rs  map.rs  state.rs
src/player/: animation.rs  jump.rs  mod.rs  movement.rs
