[package]
name = "bevy2d_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["wav", "wayland", "dynamic_linking"] }
bevy-inspector-egui = "0.21.0"
bevy_asset_loader = { version = "0.18.0", features = ["2d"] }
bevy_rapier2d = { version = "0.23.0", features = ["debug-render-2d"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
